[gd_scene load_steps=2 format=3 uid="uid://ch7gfcbunmkwj"]

[ext_resource type="Script" path="res://assets/scripts/singletons/Notifications.gd" id="1_68mj0"]

[node name="notif_layer" type="CanvasLayer" node_paths=PackedStringArray("hudPositions")]
script = ExtResource("1_68mj0")
hudPositions = [NodePath("Notifications/Margins/topleft_notifs"), NodePath("Notifications/Margins/topcenter_notifs"), NodePath("Notifications/Margins/topright_notifs"), NodePath("Notifications/Margins/bottomleft_notifs"), NodePath("Notifications/Margins/bottomcenter_notifs"), NodePath("Notifications/Margins/bottomright_notifs")]

[node name="Notifications" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 64

[node name="Margins" type="Control" parent="Notifications"]
layout_mode = 2
mouse_filter = 2

[node name="topleft_notifs" type="VBoxContainer" parent="Notifications/Margins"]
layout_mode = 1
mouse_filter = 2
theme_override_constants/separation = 0
alignment = 2

[node name="topcenter_notifs" type="VBoxContainer" parent="Notifications/Margins"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2
mouse_filter = 2
theme_override_constants/separation = 0
alignment = 2

[node name="topright_notifs" type="VBoxContainer" parent="Notifications/Margins"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
mouse_filter = 2
theme_override_constants/separation = 0
alignment = 2

[node name="bottomleft_notifs" type="VBoxContainer" parent="Notifications/Margins"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0
mouse_filter = 2
theme_override_constants/separation = 0

[node name="bottomcenter_notifs" type="VBoxContainer" parent="Notifications/Margins"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_constants/separation = 0

[node name="bottomright_notifs" type="VBoxContainer" parent="Notifications/Margins"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2
theme_override_constants/separation = 0
